--- a/assets/grid.css
+++ b/assets/grid.css
@@ -127,6 +127,8 @@ h6 {
 }
 .featured-image-small {
   max-height: 100%;
+  min-height: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: 50% 50%;
   width: 100%;
