--- a/assets/grid.css
+++ b/assets/grid.css
@@ -126,7 +126,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
 }
 
 .featured-image {
@@ -170,6 +170,7 @@ h6 {
 .post-content h6 {
   color: #000;
   margin-bottom: 0.5rem;
+  font-family: "Inconsolata", sans-serif;
 }
 .single {
   max-width: 1200px;
